加入deepseek功能，添加 OpenAI 依赖，更新书籍和借阅相关的 API 接口，增强侧边栏组件以显示当前借阅记录，优化阅读统计页面，改进用户体验和错误处理逻辑。

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,4 +25,9 @@ jwt:
 logging:
   level:
     org.springframework.security: DEBUG
-    com.familylibrary: DEBUG 
+    com.familylibrary: DEBUG
+
+deepseek:
+  api:
+    key: sk-ee33a1b951a7456690267e15ea702b13
+    # deepseek.api.url=https://api.deepseek.com/chat/completions (可选，如果URL不同) 
